--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Song Search and Playlist Creator</title>
 </head>
 <body>
-    <h1>Song Search</h1>
+    <h1>Log in using a Spotify account to Generate a Playlist</h1>
     <input type="text" id="song-input" placeholder="Enter a song or artist">
     <button id="search-button">Search</button>
     <div id="results"></div>
