--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 </head>
 <body>
     <h1>Log in using a Spotify account to Generate a Playlist</h1>
-    <input type="text" id="song-input" placeholder="Enter a song or artist">
-    <button id="search-button">Search</button>
-    <div id="results"></div>
-    <button id="create-playlist-button" style="display:none;">Create Playlist</button>
+    <button id="log-in-button":>Search</button>
 
     <script src="app.js"></script>
 </body>
