--- a/callback.html
+++ b/callback.html
@@ -21,6 +21,10 @@
             console.error('No access token found');
         }
     </script>
-    <h1>Authorization successful. You can now return to the app.</h1>
+    <h1>Authorization successful.</h1>
+    <input type="text" id="song-input" placeholder="Enter a song or artist">
+    <button id="search-button">Search</button>
+    <div id="results"></div>
+    <button id="create-playlist-button" style="display:none;">Create Playlist</button>
 </body>
 </html>
