--- a/callback.html
+++ b/callback.html
@@ -6,25 +6,11 @@
     <title>Spotify Callback</title>
 </head>
 <body>
-    <script>
-        // Handle the access token extraction from the URL
-        const hash = window.location.hash.substring(1).split('&').reduce((acc, item) => {
-            const parts = item.split('=');
-            acc[parts[0]] = decodeURIComponent(parts[1]);
-            return acc;
-        }, {});
-
-        if (hash.access_token) {
-            console.log('Access token:', hash.access_token);
-            // Store the token or redirect to your main page with the token
-        } else {
-            console.error('No access token found');
-        }
-    </script>
     <h1>Authorization successful.</h1>
     <input type="text" id="song-input" placeholder="Enter a song or artist">
     <button id="search-button">Search</button>
     <div id="results"></div>
     <button id="create-playlist-button" style="display:none;">Create Playlist</button>
+    <script src="app.js"></script>
 </body>
 </html>
