--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Log in using a Spotify account to Generate a Playlist</h1>
-    <button id="log-in-button":>Log-In</button>
+    <button id="log-in-button":>Log In</button>
 
     <script src="app.js"></script>
 </body>
