--- a/callback.html
+++ b/callback.html
@@ -11,6 +11,6 @@
     <button id="search-button">Search</button>
     <div id="results"></div>
     <button id="create-playlist-button" style="display:none;">Create Playlist</button>
-    <script src="app.js"></script>
+    <script src="callback.js"></script>
 </body>
 </html>
