--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Log in using a Spotify account to Generate a Playlist</h1>
     <button id="log-in-button":>Log In</button>
 
-    <script src="app.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
