Update and rename callback.html to createplaylist.html
Updated to local host status

--- a/createplaylist.html
+++ b/createplaylist.html
@@ -8,9 +8,12 @@
 <body>
     <h1>Authorization successful.</h1>
     <input type="text" id="song-input" placeholder="Enter a song or artist">
+    <input type="text" id="length-input" placeholder="Enter playlist length">
     <button id="search-button">Search</button>
     <div id="results"></div>
     <button id="create-playlist-button" style="display:none;">Create Playlist</button>
-    <script src="callback.js"></script>
+    <br><br>
+    <button id="playback-settings-button" style="display:none;">Go to Playback Page</button>
+    <script src="createplaylist.js"></script>
 </body>
 </html>
