Updated Index.html / Created style.css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Song Search and Playlist Creator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Log in using a Spotify account to Generate a Playlist</h1>
-    <button id="log-in-button":>Log In</button>
+
+    <div class="container">
+    
+    <img src="images/placeholder.webp" alt="Logo" id="logo">
+
+    <input type="submit" value="Please Sign in to Spotify to begin" id="SignIn">
+
+    </div>
 
     <script src="index.js"></script>
 </body>
