--- a/createplaylist.html
+++ b/createplaylist.html
@@ -13,11 +13,13 @@
 
         <input type="text" id="length-input" placeholder="Enter playlist length">
 
+        <button id="search-button">Generate</button>
+
     </div>
 
     
 
-    <button id="search-button">Search</button>
+    
 
     <div id="results"></div>
 
