--- a/createplaylist.html
+++ b/createplaylist.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Callback</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Authorization successful.</h1>
-    <input type="text" id="song-input" placeholder="Enter a song or artist">
-    <input type="text" id="length-input" placeholder="Enter playlist length">
-    <button id="search-button">Search</button>
-    <div id="results"></div>
-    <button id="create-playlist-button" style="display:none;">Create Playlist</button>
-    <br><br>
-    <button id="playback-settings-button" style="display:none;">Go to Playback Page</button>
-    <script src="createplaylist.js"></script>
+    <div class = "container">
+    	<h1>Authorization successful.</h1>
+    	<input type="text" class="input-box" id="song-input" placeholder="Enter a song or artist">
+   	 <input type="text" class="input-box" id="length-input" placeholder="Enter playlist length">
+    	<button id="search-button" class="submit-button">Search</button>
+   	 <div id="results"></div>
+   	 <button id="create-playlist-button" style="display:none;">Create Playlist</button>
+   	 <br><br>
+    	<button id="playback-settings-button" style="display:none;">Go to Playback Page</button>
+    	<script src="createplaylist.js"></script>
+    </div>
 </body>
 </html>
