--- a/index.html
+++ b/index.html
@@ -3,20 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Playlist Generator</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <title>Song Search and Playlist Creator</title>
 </head>
 <body>
-    <div class="container">
-        <i class="fas fa-music icon"></i>
-        <h1>Playlist Generator</h1>
-        <p>Log in to Spotify and discover new music tailored to your tastes!</p>
-	<button class="submit-button" button id="log-in-button":>Log In</button>
+    <h1>Log in using a Spotify account to Generate a Playlist</h1>
+    <button id="log-in-button":>Log In</button>
+
     <script src="index.js"></script>
-    </div>
-    <div class="footer-text">
-        Powered by <a href="https://www.spotify.com" target="_blank">Spotify API</a>
-    </div>
 </body>
 </html>
