--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Song Search and Playlist Creator</title>
 </head>
 <body>
-    <h1>Log in using a Spotify account to Generate a Playlist (TESTING)</h1>
+    <h1>Log in using a Spotify account to Generate a Playlist</h1>
     <button id="log-in-button":>Log In</button>
 
     <script src="index.js"></script>
