--- a/createplaylist.html
+++ b/createplaylist.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Authorization successful.</h1>
+    <button id="top-songs-button">Get Today's Top 10 Songs</button>
+    <br>
     <input type="text" id="song-input" placeholder="Enter a song or artist">
     <input type="text" id="length-input" placeholder="Enter playlist length">
     <button id="search-button">Search</button>
