Changed button styling to button class styling due to web hosting bug

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <h1>Log in using a Spotify account to Generate a Playlist</h1>
-        <button id="log-in-button" :>Log In</button>
+        <button class="button" id="log-in-button" :>Log In</button>
     </div>
     <script src="index.js"></script>
     <div class="footer-text">
