Updated footer to include link back to GetSongbpm

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="index.js"></script>
     <div class="footer-text">
         Powered by <a href="https://www.spotify.com" target="_blank">Spotify API</a>
+        and  <a href="https://GetSongBPM.com" target="_blank">GetSongbpm API</a>
     </div>
 </body>
 </html>
